--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,42 @@
 server {
-    # Escuta na porta 80 (porta padrão para HTTP)
     listen 80;
-    
-    # Define o bloco de localização para todas as requisições
-    location / {
-        # Encaminha todas as requisições recebidas para o backend, que está rodando no container 'app' na porta 8000
+
+    # Proxy para o backend principal
+    location /forecast/chiller {
         proxy_pass http://app:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-    
-    # Define o arquivo de log de erros do Nginx e o nível de log (neste caso, 'error')
-    error_log /var/log/nginx/error.log  error;
+
+    location /actual/chiller {
+        proxy_pass http://app:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /generate-graphs {
+        proxy_pass http://model_create:8001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /generate-pointlist {
+        proxy_pass http://model_create:8001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /train-models {
+        proxy_pass http://model_create:8001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    error_log /var/log/nginx/error.log error;
+    access_log /var/log/nginx/access.log;
 }
