--- a/app/backend_modelcreate/Dockerfile
+++ b/app/backend_modelcreate/Dockerfile
@@ -4,12 +4,12 @@ FROM python:3.10
 # adicionar a camada que será o diretório padrão a ser utilizado
 WORKDIR /src
 
+# copiar o arquivo de instalação dos requisitos do ambiente
+COPY requirements.txt /src/requirements.txt
+
+# RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
 # copiar os arquivos da pasta src (source) para diretório padrão do container
 COPY ./app /src/app
-
-# copiar o arquivo de instalação dos requisitos do ambiente
-COPY requirements.txt /src
-
-# rodar um comando para instalar os pacotes necessários 
-RUN pip install -r requirements.txt
 
