--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -125,14 +125,14 @@ services:  # Define os serviços que serão executados
       dockerfile: Dockerfile
     # variáveis de ambiente para configurar a conexão com o banco de dados
     volumes:
-      - ./app/backend_modelcreate/app:/src/backend_modelcreate  # mapeia o diretório local do app para o diretório no container
+      - ./app/backend_modelcreate/app:/src/app  # mapeia o diretório local do app para o diretório no container
     # mapeamento de portas: expõe a porta 8000 da máquina local para a porta 8000 do container
     ports:
       - "8001:8001"
     # diretório padrão de trabalho dentro do container
     working_dir: /src
     # comando a ser executado quando o container for iniciado
-    command: uvicorn backend_modelcreate.main:app --host 0.0.0.0 --port 8001 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8001 --reload
     # política de reinicialização do container: "always" garante que o container será reiniciado em caso de falha
     restart: always
     # define a network docker que o container fará parte
