--- a/app/backend_modelcreate/requirements.txt
+++ b/app/backend_modelcreate/requirements.txt
@@ -1,17 +1,79 @@
-fastapi
-uvicorn
-pandas
-elastic-apm
-sqlalchemy
-joblib
-matplotlib
-scikit-learn
-xgboost
-lightgbm
-catboost
-tensorflow
-pydantic-settings
-pydantic
-numpy
-openpyxl
-pyodbc
+tensorflow==2.18.0
+absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.6.2.post1
+astunparse==1.6.3
+catboost==1.2.7
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+ecs-logging==2.2.0
+elastic-apm==6.23.0
+et_xmlfile==2.0.0
+fastapi==0.115.5
+flatbuffers==24.3.25
+fonttools==4.55.0
+gast==0.6.0
+google-pasta==0.2.0
+graphviz==0.20.3
+greenlet==3.1.1
+grpcio==1.68.0
+h11==0.14.0
+h5py==3.12.1
+idna==3.10
+joblib==1.4.2
+keras==3.7.0
+kiwisolver==1.4.7
+libclang==18.1.1
+lightgbm==4.5.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+numpy==1.26.4
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.13.1
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+plotly==5.24.1
+protobuf==5.29.0
+pydantic==2.10.2
+pydantic-settings==2.6.1
+pydantic_core==2.27.1
+Pygments==2.18.0
+pyodbc==5.2.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+requests==2.32.3
+rich==13.9.4
+scikit-learn==1.5.2
+scipy==1.14.1
+setuptools==75.6.0
+six==1.16.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.3
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+# tensorflow_intel==2.10.0
+termcolor==2.5.0
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.0
+xgboost==2.1.3
