--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -30,11 +30,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location /train-models {
+    location /train {
         proxy_pass http://model_create:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_read_timeout 9999999999s;  # Tempo máximo de leitura da resposta
+        proxy_connect_timeout 9999999999s;  # Tempo máximo de conexão
+        proxy_send_timeout 9999999999s;  # Tempo máximo para enviar os dados
     }
 
     error_log /var/log/nginx/error.log error;
